PYNQ/kernel_v: Working hardware with small dimensions

--- a/pynq/kernel_u/kernel_u.ipynb
+++ b/pynq/kernel_u/kernel_u.ipynb
@@ -11,9 +11,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "try {\n",
+       "require(['notebook/js/codecell'], function(codecell) {\n",
+       "  codecell.CodeCell.options_default.highlight_modes[\n",
+       "      'magic_text/x-csrc'] = {'reg':[/^%%microblaze/]};\n",
+       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
+       "      Jupyter.notebook.get_cells().map(function(cell){\n",
+       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
+       "  });\n",
+       "});\n",
+       "} catch (e) {};\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "try {\n",
+       "require(['notebook/js/codecell'], function(codecell) {\n",
+       "  codecell.CodeCell.options_default.highlight_modes[\n",
+       "      'magic_text/x-csrc'] = {'reg':[/^%%pybind11/]};\n",
+       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
+       "      Jupyter.notebook.get_cells().map(function(cell){\n",
+       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
+       "  });\n",
+       "});\n",
+       "} catch (e) {};\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from pynq import Overlay\n",
     "import pynq.lib.dma\n",
@@ -96,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +194,7 @@
        "Register(AP_START=0, AP_DONE=0, AP_IDLE=1, AP_READY=0, RESERVED_1=0, AUTO_RESTART=0, RESERVED_2=0)"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +215,7 @@
        "0"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +242,7 @@
        "1"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +271,7 @@
        "Register(AP_START=0, AP_DONE=0, AP_IDLE=1, AP_READY=0, RESERVED_1=0, AUTO_RESTART=0, RESERVED_2=0)"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,14 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 loops, best of 3: 80.5 ms per loop\n"
+      "10 loops, best of 3: 148 ms per loop\n"
      ]
     }
    ],
@@ -407,18 +446,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.36593539 -1.03844877  0.82985754 -0.82067175] [ 0.36593539 -1.03844877  0.82985754 -0.82067175]\n",
+      "[-1.25823639  1.03248304 -0.3389279  -0.26103506] [-1.25823639  1.03248304 -0.3389279  -0.26103506]\n",
       "0.0\n",
-      "[-0.07974188  0.01109454 -0.18120697  0.73842526] [-0.07974188  0.01109454 -0.18120697  0.73842526]\n",
+      "[ 0.38526848 -0.34712276 -0.39317614  0.77762274] [ 0.38526848 -0.34712276 -0.39317614  0.77762274]\n",
       "0.0\n",
-      "10 loops, best of 3: 24.1 ms per loop\n",
       "(128, 4, 2)\n"
      ]
     }
@@ -447,7 +485,7 @@
     "x = (x * 2).astype(np.int16)\n",
     "u = (u * 2).astype(np.int16)\n",
     "\n",
-    "%timeit xu = np.transpose(np.tensordot(x, u, axes=1), (2, 1, 0))\n",
+    "xu = np.transpose(np.tensordot(x, u, axes=1), (2, 1, 0))\n",
     "print(xu.shape)"
    ]
   },
@@ -460,30 +498,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 loops, best of 3: 105 ms per loop\n",
       "\n",
       "All equal: True\n",
-      "gold[0]:  [[  8822 -32153]\n",
-      " [-17540   6635]\n",
-      " [  6489   5700]\n",
-      " [ 11839  25184]]\n",
-      "fpga[0]:  [[  8822 -32153]\n",
-      " [-17540   6635]\n",
-      " [  6489   5700]\n",
-      " [ 11839  25184]]\n"
+      "gold[0]:  [[ -3634 -22667]\n",
+      " [ 31065  15347]\n",
+      " [ 22140  -9595]\n",
+      " [  9106  26136]]\n",
+      "fpga[0]:  [[ -3634 -22667]\n",
+      " [ 31065  15347]\n",
+      " [ 22140  -9595]\n",
+      " [  9106  26136]]\n"
      ]
     }
    ],
    "source": [
     "u_tmp = np.transpose(u_buffer, (1, 3, 2, 0)).reshape(I, G, R)\n",
-    "%timeit xu_gold = np.transpose(np.tensordot(x_buffer, u_tmp, axes=1), (2, 1, 0))\n",
+    "xu_gold = np.transpose(np.tensordot(x_buffer, u_tmp, axes=1), (2, 1, 0))\n",
     "print('\\nAll equal:', np.allclose(xu_buffer, xu_gold))\n",
     "print('gold[0]: ', xu_gold[0])\n",
     "print('fpga[0]: ', xu_buffer[0])"
