--- a/pynq/kernel_v/kernel_v.ipynb
+++ b/pynq/kernel_v/kernel_v.ipynb
@@ -4,16 +4,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing Kernel-U\n",
+    "# Testing Kernel-V\n",
     "\n",
     "This notebook will test an IP written in Vivado HLS."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "try {\n",
+       "require(['notebook/js/codecell'], function(codecell) {\n",
+       "  codecell.CodeCell.options_default.highlight_modes[\n",
+       "      'magic_text/x-csrc'] = {'reg':[/^%%microblaze/]};\n",
+       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
+       "      Jupyter.notebook.get_cells().map(function(cell){\n",
+       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
+       "  });\n",
+       "});\n",
+       "} catch (e) {};\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "try {\n",
+       "require(['notebook/js/codecell'], function(codecell) {\n",
+       "  codecell.CodeCell.options_default.highlight_modes[\n",
+       "      'magic_text/x-csrc'] = {'reg':[/^%%pybind11/]};\n",
+       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
+       "      Jupyter.notebook.get_cells().map(function(cell){\n",
+       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
+       "  });\n",
+       "});\n",
+       "} catch (e) {};\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from pynq import Overlay\n",
     "import pynq.lib.dma\n",
@@ -32,11 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pynq.pl_server.device.XlnkDevice object at 0xafbe7350>\n"
+     ]
+    }
+   ],
    "source": [
-    "overlay = Overlay(\"overlay/kernel_u.bit\")\n",
+    "overlay = Overlay('overlay/kernel_v.bit')\n",
+    "print(overlay.device)\n",
     "overlay?"
    ]
   },
@@ -49,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -60,17 +108,20 @@
        "  GIER = Register(Enable=0, RESERVED=0),\n",
        "  IP_IER = Register(CHAN0_INT_EN=0, CHAN1_INT_EN=0, RESERVED=0),\n",
        "  IP_ISR = Register(CHAN0_INT_ST=0, CHAN1_INT_ST=0, RESERVED=0),\n",
-       "  num_refinements = Register(num_refinements=0)\n",
+       "  num_active_inputs = Register(num_active_inputs=0),\n",
+       "  output_size = Register(output_size=0),\n",
+       "  num_refinements_1 = Register(num_refinements=0),\n",
+       "  num_refinements_2 = Register(num_refinements=0)\n",
        "}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kernel = overlay.HlsAxisKernelU_0\n",
+    "kernel = overlay.HlsKernelV_0\n",
     "kernel.register_map\n",
     "# print(\"stream size: \", adder.stream_size)\n",
     "# accel_state = adder.get_state()\n",
@@ -96,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +155,7 @@
     "    def __init__(self, description):\n",
     "        super().__init__(description=description)\n",
     "    \n",
-    "    bindto = ['xilinx.com:hls:HlsAxisKernelU:1.0']\n",
+    "    bindto = ['xilinx.com:hls:HlsKernelV:1.0']\n",
     "\n",
     "    def start_accel(self):\n",
     "        self.register_map.CTRL.AP_START = 1\n",
@@ -126,15 +177,36 @@
     "\n",
     "    @property\n",
     "    def num_refinements(self):\n",
-    "        return self.register_map.num_refinements\n",
+    "        return (self.register_map.num_refinements_1, self.register_map.num_refinements_2)\n",
     "        # return self.read(0x10)\n",
     "\n",
     "    @num_refinements.setter\n",
     "    def num_refinements(self, R):\n",
-    "        # self.register_map.num_refinements = R\n",
-    "        self.write(0x10, R)\n",
+    "        self.register_map.num_refinements_1 = R[0]\n",
+    "        self.register_map.num_refinements_2 = R[1]\n",
+    "        # self.write(0x10, R)\n",
     "\n",
-    "overlay = Overlay(\"overlay/kernel_u.bit\")"
+    "    @property\n",
+    "    def num_active_inputs(self):\n",
+    "        return self.register_map.num_active_inputs\n",
+    "        # return self.read(0x10)\n",
+    "\n",
+    "    @num_active_inputs.setter\n",
+    "    def num_active_inputs(self, N):\n",
+    "        self.register_map.num_active_inputs = N\n",
+    "        # self.write(0x10, R)\n",
+    "\n",
+    "    @property\n",
+    "    def output_size(self):\n",
+    "        return self.register_map.output_size\n",
+    "        # return self.read(0x10)\n",
+    "\n",
+    "    @output_size.setter\n",
+    "    def output_size(self, H):\n",
+    "        self.register_map.output_size = H\n",
+    "        # self.write(0x10, R)\n",
+    "\n",
+    "overlay = Overlay(\"overlay/kernel_v.bit\")"
    ]
   },
   {
@@ -146,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -155,19 +227,19 @@
        "Register(AP_START=0, AP_DONE=0, AP_IDLE=1, AP_READY=0, RESERVED_1=0, AUTO_RESTART=0, RESERVED_2=0)"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kernel_u = overlay.HlsAxisKernelU_0\n",
-    "kernel_u.get_state()"
+    "kernel_v = overlay.HlsKernelV_0\n",
+    "kernel_v.get_state()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -176,13 +248,13 @@
        "0"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kernel_u.read(0x10)"
+    "kernel_v.read(0x10)"
    ]
   },
   {
@@ -194,28 +266,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 182,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Register(num_refinements=0), Register(num_refinements=0))\n",
+      "(Register(num_refinements=1), Register(num_refinements=1))\n"
+     ]
     }
    ],
    "source": [
-    "kernel_u.num_refinements = 1\n",
-    "kernel_u.read(0x10)"
+    "print(kernel_v.num_refinements)\n",
+    "kernel_v.num_refinements = (1, 1)\n",
+    "print(kernel_v.num_refinements)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -232,16 +303,36 @@
        "Register(AP_START=0, AP_DONE=0, AP_IDLE=1, AP_READY=0, RESERVED_1=0, AUTO_RESTART=0, RESERVED_2=0)"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(kernel_u.get_state())\n",
+    "print(kernel_v.get_state())\n",
     "# kernel_u.start_accel()\n",
-    "print(kernel_u.get_state())\n",
-    "kernel_u.get_state()"
+    "print(kernel_v.get_state())\n",
+    "kernel_v.get_state()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0x0\n",
+      "0x2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kernel_v.num_active_inputs)\n",
+    "kernel_v.num_active_inputs = 2\n",
+    "print(kernel_v.num_active_inputs)"
    ]
   },
   {
@@ -255,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -263,50 +354,54 @@
      "output_type": "stream",
      "text": [
       "Buffers setup completed.\n",
-      "x_buffer.shape: (2, 512) - Bytes: 2048\n",
-      "u_buffer.shape: (128, 128, 4, 4) - Bytes: 524288\n",
-      "xu_buffer.shape: (128, 4, 2) - Bytes: 2048\n"
+      "xus_buffer.shape: (16, 1, 4) - Bytes: 128\n",
+      "v_buffer.shape: (16, 2, 4, 4) - Bytes: 1024\n",
+      "y_buffer.shape: (2, 1, 4, 4) - Bytes: 64\n"
      ]
     }
    ],
    "source": [
     "# The following parameters are fixed in hardware and cannot be changed:\n",
-    "# - The number of inputs N\n",
-    "# - The input size I\n",
+    "# - The maximum output size H\n",
     "# - The number of gates G\n",
-    "# - The tile size Tu\n",
-    "I = 512\n",
+    "# - The tile size Tv\n",
+    "H = 128\n",
     "G = 4\n",
-    "N = 2\n",
-    "Tu = 4\n",
+    "Tv = 4\n",
     "data_t = np.int16\n",
-    "# The number of refinements R can instead be adjusted.\n",
-    "R = 128\n",
+    "# The following parameters are customizeable in hardware and can be changed:\n",
+    "# - The number of refinements R\n",
+    "# - The output_size <= H\n",
+    "# - The number of active_inputs <= N\n",
+    "R = 16\n",
+    "N = 1\n",
+    "output_size = 8 % 128\n",
+    "# NOTE: Working with (R, N, out) == (16, 2, 8) \n",
     "\n",
-    "x_buffer = pynq.allocate(shape=(N, I,), dtype=data_t)\n",
-    "u_buffer = pynq.allocate(shape=(R, I // Tu, G, Tu), dtype=data_t)\n",
-    "xu_buffer = pynq.allocate(shape=(R, G, N,), dtype=data_t)\n",
+    "xus_buffer = pynq.allocate(shape=(R, N, G), dtype=data_t)\n",
+    "v_buffer = pynq.allocate(shape=(R, output_size // Tv, G, Tv), dtype=data_t)\n",
+    "y_buffer = pynq.allocate(shape=(output_size // Tv, N, Tv, G), dtype=data_t)\n",
     "\n",
-    "for i in range(N):\n",
-    "    for j in range(I):\n",
-    "        # for ii in range(R):\n",
-    "        x_buffer[i, j] = data_t(np.random.uniform(low=-2**15, high=2**15))\n",
+    "# for i in range(N):\n",
+    "#     for j in range(I):\n",
+    "#         # for ii in range(R):\n",
+    "#         x_buffer[i, j] = data_t(np.random.uniform(low=-2**15, high=2**15))\n",
     "\n",
-    "for i in range(R):\n",
-    "    for j in range(I // Tu):\n",
-    "        for k in range(G):\n",
-    "            for ii in range(Tu):\n",
-    "                u_buffer[i, j, k, ii] = data_t(np.random.uniform(low=-2**15, high=2**15))\n",
+    "# for i in range(R):\n",
+    "#     for j in range(I // Tu):\n",
+    "#         for k in range(G):\n",
+    "#             for ii in range(Tu):\n",
+    "#                 u_buffer[i, j, k, ii] = data_t(np.random.uniform(low=-2**15, high=2**15))\n",
     "\n",
-    "for i in range(R):\n",
-    "    for j in range(G):\n",
-    "        for k in range(N):\n",
-    "            xu_buffer[i, j, k] = 0\n",
+    "# for i in range(R):\n",
+    "#     for j in range(G):\n",
+    "#         for k in range(N):\n",
+    "#             xu_buffer[i, j, k] = 0\n",
     "\n",
     "print('Buffers setup completed.')\n",
-    "print(f'x_buffer.shape: {x_buffer.shape} - Bytes: {x_buffer.nbytes}')\n",
-    "print(f'u_buffer.shape: {u_buffer.shape} - Bytes: {u_buffer.nbytes}')\n",
-    "print(f'xu_buffer.shape: {xu_buffer.shape} - Bytes: {xu_buffer.nbytes}')"
+    "print(f'xus_buffer.shape: {xus_buffer.shape} - Bytes: {xus_buffer.nbytes}')\n",
+    "print(f'v_buffer.shape: {v_buffer.shape} - Bytes: {v_buffer.nbytes}')\n",
+    "print(f'y_buffer.shape: {y_buffer.shape} - Bytes: {y_buffer.nbytes}')"
    ]
   },
   {
@@ -318,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -328,35 +423,37 @@
       "0x4\n",
       "0x1\n",
       "Starting transfer:\n",
-      "Wait x...DONE.\n",
-      "Wait u...DONE.\n",
-      "Wait xu...DONE.\n",
+      "Wait xus...DONE.\n",
+      "Wait v...DONE.\n",
+      "Wait y...DONE.\n",
       "\n",
-      "xu_buffer.shape: (128, 4, 2)\n"
+      "y_buffer.shape: (2, 1, 4, 4)\n"
      ]
     }
    ],
    "source": [
-    "kernel_u.num_refinements = R\n",
-    "print(kernel_u.get_state())\n",
-    "kernel_u.start_accel()\n",
-    "print(kernel_u.get_state())\n",
+    "kernel_v.num_refinements = (R, R)\n",
+    "kernel_v.output_size = output_size\n",
+    "kernel_v.num_active_inputs = N\n",
+    "print(kernel_v.get_state())\n",
+    "kernel_v.start_accel()\n",
+    "print(kernel_v.get_state())\n",
     "\n",
     "# Transfer\n",
     "print('Starting transfer:')\n",
-    "overlay.x_dma.sendchannel.transfer(x_buffer)\n",
-    "overlay.u_dma.sendchannel.transfer(u_buffer)\n",
-    "overlay.xu_dma.recvchannel.transfer(xu_buffer)\n",
+    "overlay.xus_dma.sendchannel.transfer(xus_buffer)\n",
+    "overlay.v_dma.sendchannel.transfer(v_buffer)\n",
+    "overlay.y_dma.recvchannel.transfer(y_buffer)\n",
     "# Then wait\n",
-    "print('Wait x...', end='')\n",
-    "overlay.x_dma.sendchannel.wait()\n",
-    "print('DONE.\\nWait u...', end='')\n",
-    "overlay.u_dma.sendchannel.wait()\n",
-    "print('DONE.\\nWait xu...', end='')\n",
-    "overlay.xu_dma.recvchannel.wait()\n",
+    "print('Wait xus...', end='')\n",
+    "overlay.xus_dma.sendchannel.wait()\n",
+    "print('DONE.\\nWait v...', end='')\n",
+    "overlay.v_dma.sendchannel.wait()\n",
+    "print('DONE.\\nWait y...', end='')\n",
+    "overlay.y_dma.recvchannel.wait()\n",
     "print('DONE.\\n')\n",
     "\n",
-    "print(f'xu_buffer.shape: {xu_buffer.shape}')\n",
+    "print(f'y_buffer.shape: {y_buffer.shape}')\n",
     "# print(f'xu_buffer: {xu_buffer}')"
    ]
   },
