Tested HlsKernelV in PYNQ.

--- a/pynq/kernel_v/kernel_v.ipynb
+++ b/pynq/kernel_v/kernel_v.ipynb
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pynq.pl_server.device.XlnkDevice object at 0xafbe7350>\n"
+      "<pynq.pl_server.device.XlnkDevice object at 0xb4349810>\n"
      ]
     }
    ],
@@ -97,25 +97,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "RegisterMap {\n",
-       "  CTRL = Register(AP_START=0, AP_DONE=0, AP_IDLE=1, AP_READY=0, RESERVED_1=0, AUTO_RESTART=0, RESERVED_2=0),\n",
+       "  CTRL = Register(AP_START=0, AP_DONE=0, AP_IDLE=1, AP_READY=0, RESERVED_1=0, AUTO_RESTART=0, RESERVED_2=0, RESERVED_3=0, RESERVED_4=0),\n",
        "  GIER = Register(Enable=0, RESERVED=0),\n",
        "  IP_IER = Register(CHAN0_INT_EN=0, CHAN1_INT_EN=0, RESERVED=0),\n",
        "  IP_ISR = Register(CHAN0_INT_ST=0, CHAN1_INT_ST=0, RESERVED=0),\n",
        "  num_active_inputs = Register(num_active_inputs=0),\n",
        "  output_size = Register(output_size=0),\n",
-       "  num_refinements_1 = Register(num_refinements=0),\n",
-       "  num_refinements_2 = Register(num_refinements=0)\n",
+       "  num_refinements_0 = Register(num_refinements_0=0),\n",
+       "  num_refinements_1 = Register(num_refinements_1=0)\n",
        "}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,13 +177,13 @@
     "\n",
     "    @property\n",
     "    def num_refinements(self):\n",
-    "        return (self.register_map.num_refinements_1, self.register_map.num_refinements_2)\n",
+    "        return (self.register_map.num_refinements_0, self.register_map.num_refinements_1)\n",
     "        # return self.read(0x10)\n",
     "\n",
     "    @num_refinements.setter\n",
     "    def num_refinements(self, R):\n",
-    "        self.register_map.num_refinements_1 = R[0]\n",
-    "        self.register_map.num_refinements_2 = R[1]\n",
+    "        self.register_map.num_refinements_0 = R[0]\n",
+    "        self.register_map.num_refinements_1 = R[1]\n",
     "        # self.write(0x10, R)\n",
     "\n",
     "    @property\n",
@@ -218,16 +218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Register(AP_START=0, AP_DONE=0, AP_IDLE=1, AP_READY=0, RESERVED_1=0, AUTO_RESTART=0, RESERVED_2=0)"
+       "Register(AP_START=0, AP_DONE=0, AP_IDLE=1, AP_READY=0, RESERVED_1=0, AUTO_RESTART=0, RESERVED_2=0, RESERVED_3=0, RESERVED_4=0)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,15 +266,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Register(num_refinements=0), Register(num_refinements=0))\n",
-      "(Register(num_refinements=1), Register(num_refinements=1))\n"
+      "(Register(num_refinements_0=0), Register(num_refinements_1=0))\n",
+      "(Register(num_refinements_0=1), Register(num_refinements_1=1))\n"
      ]
     }
    ],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -300,10 +300,10 @@
     {
      "data": {
       "text/plain": [
-       "Register(AP_START=0, AP_DONE=0, AP_IDLE=1, AP_READY=0, RESERVED_1=0, AUTO_RESTART=0, RESERVED_2=0)"
+       "Register(AP_START=0, AP_DONE=0, AP_IDLE=1, AP_READY=0, RESERVED_1=0, AUTO_RESTART=0, RESERVED_2=0, RESERVED_3=0, RESERVED_4=0)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -355,8 +355,8 @@
      "text": [
       "Buffers setup completed.\n",
       "xus_buffer.shape: (16, 1, 4) - Bytes: 128\n",
-      "v_buffer.shape: (16, 2, 4, 4) - Bytes: 1024\n",
-      "y_buffer.shape: (2, 1, 4, 4) - Bytes: 64\n"
+      "v_buffer.shape: (16, 64, 4, 4) - Bytes: 32768\n",
+      "y_buffer.shape: (64, 1, 4, 4) - Bytes: 2048\n"
      ]
     }
    ],
@@ -365,7 +365,7 @@
     "# - The maximum output size H\n",
     "# - The number of gates G\n",
     "# - The tile size Tv\n",
-    "H = 128\n",
+    "H = 512\n",
     "G = 4\n",
     "Tv = 4\n",
     "data_t = np.int16\n",
@@ -375,7 +375,7 @@
     "# - The number of active_inputs <= N\n",
     "R = 16\n",
     "N = 1\n",
-    "output_size = 8 % 128\n",
+    "output_size = 256 # % H\n",
     "# NOTE: Working with (R, N, out) == (16, 2, 8) \n",
     "\n",
     "xus_buffer = pynq.allocate(shape=(R, N, G), dtype=data_t)\n",
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -427,12 +427,12 @@
       "Wait v...DONE.\n",
       "Wait y...DONE.\n",
       "\n",
-      "y_buffer.shape: (2, 1, 4, 4)\n"
+      "y_buffer.shape: (64, 1, 4, 4)\n"
      ]
     }
    ],
    "source": [
-    "kernel_v.num_refinements = (R, R)\n",
+    "kernel_v.num_refinements = (R, R // 4)\n",
     "kernel_v.output_size = output_size\n",
     "kernel_v.num_active_inputs = N\n",
     "print(kernel_v.get_state())\n",
